Sync with SFG code